tests/rosetta/out/C/check-that-file-exists.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:24Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int printStat(map_string_int fs, char *path) {
  if (path in fs) {
    if (fs.data[path]) {
      char *tmp1 = concat_string(path, " is a directory");
      printf("%s\n", tmp1);
    } else {
      char *tmp2 = concat_string(path, " is a file");
      printf("%s\n", tmp2);
    }
  } else {
    char *tmp3 = concat_string("stat ", path);
    char *tmp4 = concat_string(tmp3, ": no such file or directory");
    printf("%s\n", tmp4);
  }
}

int main() {
  map_string_int tmp5 = map_string_int_create(0);
  int fs = tmp5;
  fs.data["docs"] = 1;
  list_string tmp6 = list_string_create(4);
  tmp6.data[0] = "input.txt";
  tmp6.data[1] = "/input.txt";
  tmp6.data[2] = "docs";
  tmp6.data[3] = "/docs";
  for (int tmp7 = 0; tmp7 < tmp6.len; tmp7++) {
    char *p = tmp6.data[tmp7];
    printStat(fs, p);
  }
}

int main() {
  main();
  return 0;
}
